finally figured out the spacing issues- note to self- too many width:

--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ header {
         width: 80%; } }
   .section__2__cards {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-start;
     padding-top: 7rem;
     width: 80%;
@@ -151,10 +151,11 @@ header {
         width: 80%; } }
     .section__2__cards__card {
       width: 33%;
-      padding: 2rem; }
+      text-align: center; }
       @media screen and (min-width: 359px) and (max-width: 500px) {
         .section__2__cards__card {
-          padding-top: 2.5rem; } }
+          padding-top: 2.5rem;
+          width: 100%; } }
       .section__2__cards__card__h4 {
         font-size: 1.6rem;
         padding: 3rem; }
@@ -165,7 +166,9 @@ header {
         width: 300px;
         height: 235px;
         display: inline-block;
-        border-radius: 5px; }
+        border-radius: 5px;
+        text-align: center;
+        margin: 0 auto; }
 
 .section--background--3 {
   background-image: linear-gradient(to right bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url(../img/landscape-mountains-nature-sky-129105.jpg);
@@ -194,10 +197,15 @@ header {
     margin: 0 auto; }
     @media screen and (min-width: 359px) and (max-width: 500px) {
       .section__3__p {
-        width: 80%; } }
+        width: 100%; } }
+    .section__3__p--customer-text {
+      font-size: 1.6rem;
+      width: 80%;
+      margin: 0 auto; }
   .section__3__cards {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: flex-start;
     padding-top: 7rem;
     width: 80%;
     margin: 0 auto; }
@@ -207,10 +215,16 @@ header {
         width: 80%; } }
     .section__3__cards__card {
       width: 33%;
-      padding: 2rem; }
+      padding-top: 2rem; }
+      @media screen and (min-width: 359px) and (max-width: 500px) {
+        .section__3__cards__card {
+          width: 100%; } }
       .section__3__cards__card--active {
         background-color: #388659;
         border-radius: 5px; }
+        @media screen and (min-width: 359px) and (max-width: 500px) {
+          .section__3__cards__card--active {
+            width: 100%; } }
       .section__3__cards__card__h4 {
         font-size: 1.6rem;
         padding: 3rem; }
@@ -220,7 +234,9 @@ header {
         width: 300px;
         height: 235px;
         display: inline-block;
-        border-radius: 5px; }
+        border-radius: 5px;
+        margin: 0 auto;
+        text-align: center; }
       .section__3__cards__card i {
         font-size: 10rem; }
         @media screen and (min-width: 359px) and (max-width: 500px) {
