--- a/sass/layout/_section-1.scss
+++ b/sass/layout/_section-1.scss
@@ -63,7 +63,7 @@
 
     &__cards {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: flex-start;
         padding-top: 7rem;
         width: 80%;
@@ -76,10 +76,12 @@
 
         &__card { 
             width: 33%;
-            padding: 2rem;
+            
+            text-align: center;
 
             @include atSmall {
                 padding-top: 2.5rem;
+                width: 100%;
             }
             
             &__h4 {
@@ -96,6 +98,8 @@
                 height: 235px;
                 display: inline-block;
                 border-radius: 5px;
+                text-align: center;
+                margin: 0 auto;
             }
         }
     }
@@ -136,14 +140,21 @@
         margin: 0 auto;
 
         @include atSmall {
+            width: 100%;
+        }
+
+        &--customer-text {
+            font-size: $font-size-regular;
             width: 80%;
+            margin: 0 auto;
         }
 
     }
 
     &__cards {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
+        align-items: flex-start;
         padding-top: 7rem;
         width: 80%;
         margin: 0 auto;
@@ -155,11 +166,19 @@
 
         &__card {
             width: 33%;
-            padding: 2rem;
+            padding-top: 2rem;
+
+            @include atSmall {
+                width: 100%;
+            }
             
             &--active {
                 background-color: $color-primary-dark;
                 border-radius: 5px;
+
+                @include atSmall {
+                    width: 100%;
+                }
             }
             
             &__h4 {
@@ -176,6 +195,8 @@
                 height: 235px;
                 display: inline-block;
                 border-radius: 5px;
+                margin: 0 auto;
+                text-align: center;
             }
 
             i {
